Adding the latest working proof of concept

--- a/2dCompact/src/makefile
+++ b/2dCompact/src/makefile
@@ -5,7 +5,7 @@ all: 2dCompact.exe
 	 g++ -o 2dCompact 2dCompact.o myVector.o twoDDisk.o verlet.o -lm -w
 
 2dCompact.o: 2dCompact.cpp
-	 g++ -c 2dCompact.cpp myVector.cpp twoDDisk.cpp verlet.cpp -lm -w
+	 g++ -c 2dCompact.cpp myVector.cpp twoDDisk.cpp verlet.cpp -lm -w -std=gnu++11
      
 clean:
 	 rm 2dCompact.o 2dCompact
